--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,9 +1,22 @@
+---
+import Button from "./Button.astro";
+---
 <footer>
-    <h3>Nyhedsbrev</h3>
-    <p>Tilmeld dig vores nyhedsbrev og få nyt om pigers trivsel og vores arbejde.</p>
-    <form>
-        <label for="email">Din e-mail</label>
-        <input type="email" id="email" name="email">
-        <input type="submit" value="Submit">
-      </form>
+  <h3>Nyhedsbrev</h3>
+  <p>Tilmeld dig vores nyhedsbrev og få nyt om pigers trivsel og vores arbejde.</p>
+  <form>
+    <div>
+      <label for="email">Din e-mail</label>
+      <input type="email" id="email" name="email" class="dark" />
+    </div>
+    <input class="btn light" type="submit" value="Timeld her" />
+  </form>
+  <p>Når du tilmelder dig GirTalks nyhedsbrev, accepterer du samtidig, at vi sender dig nyt om vores arbejde og markedsføringsmaterialer. Du kan til hver en tid afmelde dig igen.</p>
+  <h5>GirlTalk</h5>
+  <p>Martinsvej 7, 1</p>
+  <p>1926 Frederiksberg C</p>
+  <p>CVR 30 14 53 48</p>
+  <h5>Kontakt os</h5>
+  <p>51 91 33 77</p>
+  <p>info@girltalk.dk</p>
 </footer>
