--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -22,7 +22,7 @@ const navLinks = [{
 }]
 ---
 
-<nav>
+<nav class="NavPrimary">
     <div class="nav-links" role="navigation">
 {navLinks.map(link => (
     <a href={link.url}>{link.name}</a>
