--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -6,15 +6,15 @@ const navLinks = [{
 },
 {
     name: 'Chat',
-    url: '/chat',
+    url: '/pigeunivers/chat',
 },
 {
     name: 'Brevkasse',
-    url: '/girls-universe/brevkasse',
+    url: '/pigeunivers/brevkasse',
 },
 {
     name: 'Medier',
-    url: '/medier',
+    url: '/pigeunivers/medier',
 },
 {
     name: 'Til forside',
