improved ColorSection component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,6 @@ import Button from "../components/ui/Button.astro"
 		<h2>... men vi er her, når du bliver i tvivl</h2>
 	</section>
 <div>
-	<Button text="Go to Girls Universe" link="/pigeunivers/main" size="extra-large"/>
+	<Button text="Go to Girls Universe" link="/pigeunivers/main" size="medium" style="dark"/>
 </div>
 	</BaseLayout>
