--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -12,13 +12,15 @@ const { color, hex, title } = Astro.props;
       <div class:list={[ 'color-background', color]}>
         <svg width="8" height="8" viewBox="0 0 75 75" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="75" height="75" fill="#F5F5F5"></rect>
-          <rect x="-75" y="-75" width="150" height="150" fill={color}></rect>
+          <rect x="-75" y="-75" width="150" height="150" fill={hex}></rect>
           <circle r="75" fill="#FBFBFB"></circle>
         </svg>
       </div>
     </div>
     <section class:list={[ 'description', color]}>
+      <section class="description-container">
       <slot></slot>
+    </section>
     </section>
   </div>
 
