--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -190,9 +190,11 @@ footer {
 
   .color-background {
     position: relative;
-    flex-grow: 1;
+    //flex-grow: 1;
+    width: 100%;
     height: auto;
     border-radius: 8px 8px 0 0;
+
 
   }
 
@@ -202,6 +204,9 @@ footer {
     background-color: transparent;
     bottom: 0;
     left: -8px;
+  }
+  .description-container {
+    padding: var(--spacing-medium);
   }
 
   .description {
