--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -1,7 +1,7 @@
 ---
-import GirlsUniLayout from "../../layouts/GirlsUniLayout.astro";
-import ColorSection from "../../components/ui/ColorSection.astro";
-import Button from "../../components/ui/Button.astro";
+import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
+import ColorSection from "../components/ui/ColorSection.astro";
+import Button from "../components/ui/Button.astro";
 ---
 
 <GirlsUniLayout title="Brevkasse">
