--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -1,5 +1,5 @@
 ---
-import GirlsUniLayout from "../../layouts/GirlsUniLayout.astro"
+import GirlsUniLayout from "../layouts/GirlsUniLayout.astro"
 
 ---
 <GirlsUniLayout title="Pigeunivers">
