--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -7,7 +7,17 @@ const { link, text, style = "dark", size = "medium" } = Astro.props;
 </a>
 
 <style>
+
+.btn {
+  border-radius: 50px;
+  text-transform: uppercase;
+  font-weight: var(--font-weight-bold);
+  display: flex;
+  justify-content: center;
+}
+
   /* SIZES */
+
 
   .extra-small {
     font-size: var(--font-size-xs);
