--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro"
 import Button from "../components/ui/Button.astro"
+import QuoteSection from "../components/ui/QuoteSection.astro"
 ---
 <BaseLayout title="GirlTalk">
 	<section>
@@ -10,4 +11,5 @@ import Button from "../components/ui/Button.astro"
 <div>
 	<Button text="Go to Girls Universe" link="/pigeunivers/main" size="medium" style="dark"/>
 </div>
+<QuoteSection firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" color="pink"/>
 	</BaseLayout>
