--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -1,8 +1,8 @@
 ---
 import { Icon } from 'astro-icon'
 const navLinks = [{
-    name: 'Home',
-    url: '/',
+    name: 'Støt',
+    url: '/stot',
 },
 {
     name: 'Pigeunivers',
@@ -22,10 +22,184 @@ const navLinks = [{
 }]
 ---
 
-<nav class="NavPrimary">
-    <div class="nav-links" role="navigation">
-{navLinks.map(link => (
-    <a href={link.url}>{link.name}</a>
-))}
+<nav class="NavPrimary"> 
+
+<div class="nav-primary-logo">
+    <h1><a href="index.html"> GirlTalk</a></h1>
 </div>
+<ul class="nav-links" role="navigation">
+ {navLinks.map(link => (
+ <li> <a href={link.url}>{link.name}</a></li> ))}
+ </ul>
+
 </nav>
+
+<div class="NavPrimaryMobile"> 
+    <input id="toggle" type="checkbox"></input>
+
+    <label for="toggle" class="hamburger">
+    <!-- creating hamburger icon   -->
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </label>
+    
+    <div class="nav">
+      <div class="nav-wrapper">
+        <nav>
+	
+            <ul>
+                <li><a href="index.html">Forside</a></li>
+                <li><a href="om-os.html">Om os</a></li>
+                <li><a href="stot.html">Støt</a></li>
+                <li><a href="frivillig.html">Bliv frivillig</a></li>
+                <li><a href="foraeldre.ht">Forældre</a></li>
+        
+        
+            </ul>
+        
+            <a href="main.html">Pigeunivers</a>
+		</div>
+	</nav>
+      </div>
+    </div>
+            
+    
+</div>
+
+
+
+
+<style>
+
+
+
+
+#toggle {
+  display: none;
+}
+
+/**
+  Hamburger
+**/
+.hamburger {
+  position: absolute;
+  top: 5em;
+  right: 5%;
+  margin-left: -2em;
+  margin-top: -45px;
+  width: 2em;
+  height: 45px;
+  z-index: 5;
+}
+
+.hamburger div {
+  position: relative;
+  width: 3em;
+  height: 7px;
+  border-radius: 3px;
+  background-color: #B58ECC;
+  margin-top: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+/**
+Styling navbar
+**/
+.nav {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #F0ECFC;
+  top: -100%; left: 0; right: 0; bottom: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  transform: scale(0);
+}
+.nav-wrapper {
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+  height: 100%;
+}
+.NavPrimaryMobile nav {
+  text-align: left;
+  margin-left: 25%;
+}
+
+.NavPrimaryMobile nav ul{
+    list-style: none;
+}
+.NavPrimaryMobile nav a {
+  position: relative;
+  text-decoration: none;
+  color: black;
+  font-size: 2em;
+  display: inline-block;
+  margin-top: 1.25em;
+  transition: color 0.2s ease-in-out;
+  letter-spacing: 1px;
+}
+
+.NavPrimaryMobile nav a:hover {
+  color:#5F0A87;
+  font-weight:bolder; 
+}
+
+/**
+Adding Functionality : controlling state of the hamburger
+**/
+#toggle:checked + .hamburger .bar1 {
+  transform: rotate(-45deg);
+  margin-top: 25px;
+}
+#toggle:checked + .hamburger .bar3 {
+  opacity: 0;
+  transform: rotate(45deg);
+}
+#toggle:checked + .hamburger .bar2 {
+  transform: rotate(45deg);
+  margin-top: -7px;
+}
+
+#toggle:checked + .hamburger + .nav {
+  top: 0;
+  transform: scale(1);
+}
+
+.nav-primary-logo{
+display: flex;
+justify-content: center;
+}
+
+.nav-links{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        list-style: none;
+    }
+    
+.NavPrimary{
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.10)
+
+}
+
+
+
+    @media only screen and (min-width: 600px){
+    .NavPrimaryMobile{
+        display: none;
+    }}
+
+ 
+
+
+    @media only screen and (max-width: 600px){
+    .NavPrimary{
+        display: none;
+    }
+
+    }
+
+
+</style>
