--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -95,10 +95,10 @@ const navLinks = [{
 
 .hamburger div {
   position: relative;
-  width: 3em;
-  height: 7px;
+  width: 2.5em;
+  height: 6px;
   border-radius: 3px;
-  background-color: #B58ECC;
+  background-color: var(--color-black-ish);
   margin-top: 8px;
   transition: all 0.3s ease-in-out;
 }
@@ -110,7 +110,7 @@ Styling navbar
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #F0ECFC;
+  background-color: var(--color-off-white);
   top: -100%; left: 0; right: 0; bottom: 0;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
@@ -129,12 +129,13 @@ Styling navbar
 
 .NavPrimaryMobile nav ul{
     list-style: none;
+    margin-top: 4rem;
 }
 .NavPrimaryMobile nav a {
   position: relative;
   text-decoration: none;
   color: black;
-  font-size: 2em;
+  font-size: 1rem;
   display: inline-block;
   margin-top: 1.25em;
   transition: color 0.2s ease-in-out;
@@ -142,7 +143,7 @@ Styling navbar
 }
 
 .NavPrimaryMobile nav a:hover {
-  color:#5F0A87;
+  color:var( --color-purple);
   font-weight:bolder; 
 }
 
