--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -26,6 +26,12 @@ const navLinks = [{
 
 <div class="nav-primary-logo">
     <h1><a href="index.html"> GirlTalk</a></h1>
+    <div class="search-container">
+        <form action="/search" method="get">
+          <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
+          <label class="searchbutton" for="searchright"><span class="mglass">&#9906;</span></label>
+        </form>
+      </div>
 </div>
 <ul class="nav-links" role="navigation">
  {navLinks.map(link => (
@@ -54,11 +60,11 @@ const navLinks = [{
                 <li><a href="stot.html">Støt</a></li>
                 <li><a href="frivillig.html">Bliv frivillig</a></li>
                 <li><a href="foraeldre.ht">Forældre</a></li>
-        
+        <li class="last-mobile-link"> <a href="main.html">Pigeunivers</a></li>
         
             </ul>
         
-            <a href="main.html">Pigeunivers</a>
+           
 		</div>
 	</nav>
       </div>
@@ -72,8 +78,77 @@ const navLinks = [{
 
 <style>
 
+/*SEARCH BAR*/
 
+.search-container {
+	position: relative;
+	display: inline-block;
+	margin: 4px 2px;
+	height: 50px;
+	width: 50px;
+	vertical-align: bottom;
+}
 
+.mglass {
+	display: inline-block;
+	pointer-events: none;
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+}
+
+.searchbutton {
+	position: absolute;
+	font-size: 32px;
+	width: 100%;
+    height: 100%;
+	margin: 0;
+	padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.search:focus + .searchbutton {
+	transition-duration: 0.4s;
+	-moz-transition-duration: 0.4s;
+	-webkit-transition-duration: 0.4s;
+	-o-transition-duration: 0.4s;
+	background-color: white;
+	color: black;
+}
+
+.search {
+	position: absolute;
+	left: 50px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
+	background-color: white;
+	outline: none;
+	border: none;
+	padding: 0;
+	width: 0;
+	height: 100%;
+	z-index: 10;
+	transition-duration: 0.4s;
+	-moz-transition-duration: 0.4s;
+	-webkit-transition-duration: 0.4s;
+	-o-transition-duration: 0.4s;
+}
+
+.search:focus {
+	width: 363px; /* Bar width+1px */
+	padding: 0 16px 0 0;
+}
+
+.expandright {
+	left: auto;
+	right: 49px; /* Button width-1px */
+}
+
+.expandright:focus {
+	padding: 0 0 0 16px;
+}
+
+/*BURGER MENU*/
 
 #toggle {
   display: none;
@@ -104,8 +179,8 @@ const navLinks = [{
 }
 
 /**
-Styling navbar
-**/
+
+/*STYLING BURGER MENU*/
 .nav {
   position: fixed;
   width: 100%;
@@ -147,8 +222,14 @@ Styling navbar
   font-weight:bolder; 
 }
 
+/*LAST LINK*/
+.last-mobile-link{
+    padding-top: 40px;
+}
+
+
 /**
-Adding Functionality : controlling state of the hamburger
+FUNCTIONALITY. CONTROLLING STATE OF NAVIGATION
 **/
 #toggle:checked + .hamburger .bar1 {
   transform: rotate(-45deg);
@@ -168,9 +249,15 @@ Adding Functionality : controlling state of the hamburger
   transform: scale(1);
 }
 
+
+
+/*NAV PRIMARY*/
+
 .nav-primary-logo{
 display: flex;
-justify-content: center;
+justify-content: space-evenly;
+padding-bottom: 20px;
+padding-top: 20px;
 }
 
 .nav-links{
@@ -178,12 +265,14 @@ justify-content: center;
         flex-direction: row;
         justify-content: space-around;
         list-style: none;
+        padding-bottom: 30px;
     }
     
 .NavPrimary{
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.10)
 
 }
+
 
 
 
