--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -28,6 +28,44 @@ const { color, hex, title } = Astro.props;
 
 <style> 
 
+
+
+/* COLOR SECTION */
+.ColorSection {
+  .flex-container {
+    display: flex;
+    width: 90vw;
+  }
+
+  h1 {
+    padding: 5px;
+  }
+
+  .color-background {
+    position: relative;
+    //flex-grow: 1;
+    width: 100%;
+    height: auto;
+    border-radius: 8px 8px 0 0;
+  }
+
+  svg {
+    content: "";
+    position: absolute;
+    background-color: transparent;
+    bottom: 0;
+    left: -8px;
+  }
+  .description-container {
+    padding: var(--spacing-medium);
+  }
+
+  .description {
+    width: 90vw;
+    border-radius: 8px 0 8px 8px;
+  }
+}
+
 .pink {
   background-color: var( --color-pink);
 }
