--- a/src/layouts/GirlsUniLayout.astro
+++ b/src/layouts/GirlsUniLayout.astro
@@ -1,6 +1,6 @@
 ---
-import NavSecondary from "../components/ui/NavSecondary.astro"
-import Footer from "../components/ui/Footer.astro"
+import NavSecondary from "../components/ui/NavSecondary.astro";
+import Footer from "../components/ui/Footer.astro";
 import "../styles/global.scss";
 const { title = "GirlTalk" } = Astro.props;
 ---
@@ -16,11 +16,25 @@ const { title = "GirlTalk" } = Astro.props;
   <body>
     <div class="wrapper">
       <NavSecondary />
-    <main>
+      <main>
         <slot>Default</slot>
-
-    </main>
- <Footer />
-</div>
+      </main>
+      <Footer />
+    </div>
   </body>
 </html>
+
+<style>
+  .wrapper {
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+  }
+
+  main {
+    display: grid;
+    gap: 20px;
+    margin: 0 20px;
+  }
+</style>
