--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -19,7 +19,7 @@ import Button from "./Button.astro";
 </div> 
 </section> 
  <section class="bottom_section">
-  <div class="footer_links">
+  <div class="footer-links-container">
  <ul>
   <li> <a href="index.html">Forside</a></li>
   <li> <a href="om-os.html">Om os</a></li>
@@ -89,12 +89,12 @@ footer {
   
 }
 
-.footer_links{
+.footer-links-container{
 display: flex;
 flex-direction: row;
 }
 
-.footer_links ul{
+.footer-links-container ul{
 list-style: none;
 padding-right: 1rem;
 }
