--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -14,7 +14,7 @@ import Button from "./Button.astro";
       <label for="email">Din e-mail</label>
       <input type="email" id="email" name="email" class="dark" />
     </div>
-    <Button size="extra-small" style="light" text="Tilmeld dig" />
+    <Button size="extra-small" style="dark" text="Tilmeld dig" />
   </form>
 </div> 
 </section> 
@@ -43,7 +43,7 @@ import Button from "./Button.astro";
   <p>1926 Frederiksberg C</p>
   <p>CVR 30 14 53 48</p>
 </div>
-  <div>
+  <div class="pl20">
   <h5>Kontakt os</h5>
   <p>51 91 33 77</p>
   <p>info@girltalk.dk</p></div>
@@ -54,8 +54,9 @@ import Button from "./Button.astro";
 <style>
 
 footer {
-  background-color: var(--color-black-ish);
-  color: var(--color-off-white); }
+  background-color: rgb(255, 228, 238, 0.75);
+  color: var(--color-black-ish); 
+padding: 30px;}
   form {
     display: flex;
     flex-direction: column;
@@ -65,7 +66,7 @@ footer {
     width: 250px;
     padding: 10px;
     border-radius: 8px;
-    border: 1px var(--color-off-white) solid;
+    border: 1px var(--color-black-ish) solid;
   }
 
   input[type="submit"] {
@@ -77,6 +78,8 @@ footer {
   display:flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  border-bottom: 2px solid black;
+  padding-bottom: 20px;
   }
 
 .first_footer_div{
@@ -110,7 +113,18 @@ padding-right: 1rem;
 justify-content: space-between;
 }
 
+.pl20{
+  padding-left: 20px;
+}
+
 div{
   padding-top: 20px;
 }
+
+@media only screen and (max-width: 600px){
+  .first_footer_div{
+    width: 100%;
+  }
+}
+
 </style>
