added new components and updated css variables

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -21,7 +21,7 @@ const navLinks = [{
     url: '/',
 }]
 ---
-
+<header>
 <nav>
     <div class="nav-links" role="navigation">
 {navLinks.map(link => (
@@ -29,3 +29,4 @@ const navLinks = [{
 ))}
 </div>
 </nav>
+</header>
