--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -1,9 +1,10 @@
 ---
 import GirlsUniLayout from "../layouts/GirlsUniLayout.astro"
-
+import QuoteSection from "../components/ui/QuoteSection.astro"
 ---
 <GirlsUniLayout title="Pigeunivers">
 	<section>
 		<p>Pigeunivers</p>
+		<QuoteSection firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" color="pink"/>
 	</section>
 	</GirlsUniLayout>
