--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -1,9 +1,11 @@
 ---
 import GirlsUniLayout from "../layouts/GirlsUniLayout.astro"
-
+import ArticleCard from "../components/cards/ArticleCard.astro"
 ---
 <GirlsUniLayout title="Pigeunivers">
 	<section>
-		<p>Pigeunivers</p>
+		<p>Medier</p>
+		<ArticleCard header="Hvordan onnaner man?" category="Krop og sex" />
+
 	</section>
 	</GirlsUniLayout>
