--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -1,5 +1,4 @@
 ---
-import { Icon } from 'astro-icon'
 const navLinks = [{
     name: 'Støt',
     url: '/stot',
@@ -87,6 +86,7 @@ const navLinks = [{
   display: flex;
   width: 100%;
   justify-content: end;
+  padding: 0%;
 }
 
 .logo{
@@ -99,7 +99,7 @@ const navLinks = [{
 	position: relative;
 	display: inline-block;
 	margin: 4px 2px;
-	height: 50px;
+	height: 30px;
 	width: 50px;
 	vertical-align: bottom;
 }
@@ -186,7 +186,7 @@ const navLinks = [{
 .hamburger div {
   position: relative;
   width: 2.5em;
-  height: 6px;
+  height: 0.5px;
   border-radius: 3px;
   background-color: var(--color-black-ish);
   margin-top: 8px;
@@ -272,8 +272,8 @@ FUNCTIONALITY. CONTROLLING STATE OF NAVIGATION
 position: relative;
 display: flex;
 justify-content: center;
-padding-bottom: 20px;
-padding-top: 20px;
+padding-bottom: 10px;
+padding-top: 10px;
 }
 
 
@@ -283,7 +283,7 @@ padding-top: 20px;
         flex-direction: row;
         justify-content: space-around;
         list-style: none;
-        padding-bottom: 30px;
+        padding-bottom: 20px;
     }
     
 
@@ -292,7 +292,6 @@ padding-top: 20px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.10)
 
 }
-
 
 
 
