--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -30,6 +30,7 @@ const { title = "GirlTalk" } = Astro.props;
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
+    padding-top: 0%;
   }
 
   main {
