--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -186,11 +186,12 @@ const navLinks = [{
 .hamburger div {
   position: relative;
   width: 2.5em;
-  height: 0.5px;
+  height: 6px;
   border-radius: 3px;
   background-color: var(--color-black-ish);
   margin-top: 8px;
   transition: all 0.3s ease-in-out;
+  padding-top: 0%;
 }
 
 /**
