--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -14,12 +14,12 @@ import Button from "./Button.astro";
       <label class="themeheader" for="email">Din E-mail</label>
       <input type="email" id="email" name="email" class="dark" />
     </div>
-    <Button size="extra-small" style="dark" text="Tilmeld dig" />
+    <Button size="extra-small" text="Tilmeld dig" />
   </form>
 </div> 
 </section> 
  <section class="bottom_section">
-  <div class="footer-links-container nav-links">
+  <div class="footer-links-container footer_links">
  <ul>
   <li> <a href="index.html">Forside</a></li>
   <li> <a href="om-os.html">Om os</a></li>
@@ -50,7 +50,11 @@ import Button from "./Button.astro";
 </section>
   </section>
   <section class="socialmedia">
-
+<a href="https://www.facebook.com/GirlTalkdk"> <img src="/facebook.svg" alt="facebook"> </a>
+<a href="https://www.instagram.com/girltalkdk/"> <img src="/instagram.svg" alt="instagram"> </a>
+<a href="https://www.tiktok.com/@girltalkdk"> <img src="/tiktok.svg" alt="tiktok"> </a>
+<a href="https://www.youtube.com/channel/UCYMPMeYqeojUzmiplzk78sg"> <img src="youtube.svg" alt="youtube"> </a>
+<a href="https://www.linkedin.com/company/girltalk.dk/mycompany/"> <img src="linkedin.svg" alt="linkedin"> </a>
   </section>
 </footer>
 
@@ -78,7 +82,14 @@ padding: 30px;}
   }
 
 .socialmedia{
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.socialmedia a{
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .footer_newsletter{
   display:flex;
@@ -131,6 +142,8 @@ footer div{
   .first_footer_div{
     width: 100%;
   }
+
+  
 }
 
 </style>
