--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro"
 import Button from "../components/ui/Button.astro"
+import SearchBar from "../components/ui/SearchBar.astro"
 import BoxColor from "../components/ui/BoxColor.astro"
 
 ---
@@ -12,4 +13,5 @@ import BoxColor from "../components/ui/BoxColor.astro"
 <div>
 	<Button text="Go to Girls Universe" link="/pigeunivers/main" size="medium" style="dark"/>
 </div>
+<SearchBar/>
 	</BaseLayout>
