--- a/src/components/ui/SearchBar.astro
+++ b/src/components/ui/SearchBar.astro
@@ -20,7 +20,7 @@ input#search-bar{
   border-radius: 15px;
   outline: none;
   &:focus{
-    border: 1px solid #008ABF;
+    border: 1px solid var(--color-pink);
     transition: 0.35s ease;
     color: #008ABF;
     &::-webkit-input-placeholder{
